charts/fwd-proxy/chart/config/envoy.yaml
static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: http
              - match:
                  connect_matcher:
                    {}
                route:
                  cluster: https
                  upgrade_configs:
                    - upgrade_type: CONNECT
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: http
    connect_timeout: 0.25s
    type: STRICT_DNS
    load_assignment:
      cluster_name: foo
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: fwd-proxy-envoy-webserver
                port_value: 80
  - name: https
    connect_timeout: 0.25s
    type: STRICT_DNS
    load_assignment:
      cluster_name: foo2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: fwd-proxy-envoy-webserver
                port_value: 443
